--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.11.6",
     "@babel/parser": "^7.11.5",
     "@babel/traverse": "^7.11.5"
   }
