--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@babel/core": "^7.11.6",
     "@babel/parser": "^7.11.5",
     "@babel/traverse": "^7.11.5"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.11.5"
   }
 }
